--- a/app/scss/core/_layout.scss
+++ b/app/scss/core/_layout.scss
@@ -6,6 +6,7 @@ $breakpoints: (
 
 $z-index: (
   camera__img,
+  camera__img--restart,
   character,
   confetti,
   confetti__item,
